fix: unhide scrollbar

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,13 +22,13 @@ body {
 
 	background-image: url('../assets/noise.svg');
 
-	// Remove scrollbar
-	-ms-overflow-style: none;
+	// // Remove scrollbar
+	// -ms-overflow-style: none;
 
-	// https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp
-	&::-webkit-scrollbar {
-		display: none;
-	}
+	// // https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp
+	// &::-webkit-scrollbar {
+	// 	display: none;
+	// }
 }
 
 ::selection {
